[gd_scene load_steps=3 format=3 uid="uid://b3kgwa2iuucrh"]

[ext_resource type="Script" path="res://src/ui/game_menu/import_exp_menu.gd" id="1_ishyk"]
[ext_resource type="Theme" uid="uid://bql5sxaowafw3" path="res://resources/theme/wc3_theme.tres" id="2_ui0c6"]

[node name="ImportExpMenu" type="Control" node_paths=PackedStringArray("_exp_password_edit")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
script = ExtResource("1_ishyk")
_exp_password_edit = NodePath("PanelContainer/VBoxContainer/ExpPasswordEdit")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -174.5
offset_right = 123.0
offset_bottom = 174.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ui0c6")
theme_type_variation = &"MainPanelContainer"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Paste experience password exported from another game client.

(note that copy-paste may fail in browser, you will need to type the password manually)"
autowrap_mode = 2

[node name="ExpPasswordEdit" type="TextEdit" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
context_menu_enabled = false

[node name="Spacer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="ImportButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Apply"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/ImportButton" to="." method="_on_import_button_pressed"]
